--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:background="@color/colorPrimary"
         android:layout_height="wrap_content">
         <android.support.v7.widget.SearchView
+            android:id="@+id/searchWidget"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
