--- a/app/src/main/res/drawable/modified_search_button.xml
+++ b/app/src/main/res/drawable/modified_search_button.xml
@@ -2,4 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <solid android:color="#FFF"/>
     <corners android:radius="10dp"/>
+    <stroke android:color="#938f8f"
+        android:width="2dp"/>
 </shape>
