--- a/app/src/main/res/layout/grid_planet_view.xml
+++ b/app/src/main/res/layout/grid_planet_view.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
+    <FrameLayout
         android:layout_width="match_parent"
-      app:cardCornerRadius="5dp"
+        android:background="@drawable/modified_search_button"
         android:layout_margin="5dp"
         android:layout_height="match_parent" >
         <LinearLayout
@@ -72,5 +72,5 @@
             </LinearLayout>
 
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </FrameLayout>
 </LinearLayout>
