--- a/app/src/main/res/drawable/modified_search_button.xml
+++ b/app/src/main/res/drawable/modified_search_button.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <solid android:color="#FFF"/>
-    <corners android:radius="10dp"/>
-    <stroke android:color="#938f8f"
-        android:width="2dp"/>
+    <corners android:radius="5dp"/>
+<!--<stroke android:color="#1e000000"-->
+    <!--android:width="1dp"-->
+  <!--/>-->
 </shape>
