--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -24,5 +24,114 @@
     <include layout="@layout/content_main2" />
 
 
+    <!--<FrameLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:orientation="vertical"-->
+            <!--android:layout_height="match_parent">-->
+
+            <!--<TextView-->
+                <!--android:id="@+id/nameofplanet"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="hikajsdflkjaskdlfjklasdjf"/>-->
+            <!--<android.support.v7.widget.CardView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="8dp"-->
+                <!--android:layout_marginRight="8dp"-->
+                <!--android:layout_marginTop="65dp"-->
+                <!--android:elevation="5dp"-->
+                <!--app:cardCornerRadius="3dp">-->
+                <!--<android.support.v7.widget.RecyclerView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:id="@+id/rvParticularData"-->
+                    <!--android:nestedScrollingEnabled="false"-->
+                    <!--android:layout_height="match_parent">-->
+
+                <!--</android.support.v7.widget.RecyclerView>-->
+            <!--</android.support.v7.widget.CardView>-->
+
+            <!--<android.support.v7.widget.CardView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginLeft="8dp"-->
+                <!--android:layout_marginRight="8dp"-->
+                <!--android:layout_marginTop="20dp"-->
+                <!--android:elevation="5dp"-->
+                <!--app:cardCornerRadius="3dp">-->
+
+                <!--<ListView-->
+                    <!--android:id="@+id/planetDetailList"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent"-->
+                    <!--android:layout_marginStart="8dp"-->
+                    <!--android:layout_marginLeft="8dp"-->
+                    <!--android:layout_marginEnd="8dp"-->
+                    <!--android:layout_marginRight="8dp"-->
+                    <!--android:layout_marginBottom="8dp"-->
+                    <!--android:paddingTop="16dp"-->
+                    <!--/>-->
+
+
+            <!--</android.support.v7.widget.CardView>-->
+        <!--</LinearLayout>-->
+    <!--</FrameLayout>-->
+<!--<FrameLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:orientation="vertical"-->
+        <!--android:layout_height="match_parent">-->
+        <!--<TextView-->
+        <!--android:id="@+id/nameofplanet"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="hikajsdflkjaskdlfjklasdjf"/>-->
+        <!--<android.support.v7.widget.CardView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--android:layout_marginRight="8dp"-->
+        <!--android:layout_marginTop="65dp"-->
+        <!--android:elevation="5dp"-->
+        <!--app:cardCornerRadius="3dp">-->
+        <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:id="@+id/rvParticularData"-->
+        <!--android:nestedScrollingEnabled="false"-->
+        <!--android:layout_height="match_parent">-->
+
+        <!--</android.support.v7.widget.RecyclerView>-->
+        <!--</android.support.v7.widget.CardView>-->
+
+        <!--<android.support.v7.widget.CardView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--android:layout_marginRight="8dp"-->
+        <!--android:layout_marginTop="20dp"-->
+        <!--android:elevation="5dp"-->
+        <!--app:cardCornerRadius="3dp">-->
+        <!--<android.support.v7.widget.RecyclerView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:id="@+id/rvExtraTopic"-->
+           <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginLeft="8dp"-->
+
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginRight="8dp"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--android:paddingTop="16dp"-->
+            <!--android:nestedScrollingEnabled="false"-->
+            <!--android:layout_height="match_parent">-->
+        <!--</android.support.v7.widget.RecyclerView>-->
+        <!--</android.support.v7.widget.CardView>-->
+
+    <!--</LinearLayout>-->
+<!--</FrameLayout>-->
 
 </android.support.design.widget.CoordinatorLayout>
