--- a/app/src/main/res/layout/list_exploration.xml
+++ b/app/src/main/res/layout/list_exploration.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
 
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
         <LinearLayout
@@ -25,7 +25,18 @@
                 <!--android:layout_gravity="left"-->
                 <!--android:fontFamily="sans-serif"-->
                 <!--android:textColor="#000"/>-->
-            <TextView
+            <FrameLayout
+                android:layout_width="match_parent"
+
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="30dp"
+                    android:src="@drawable/ic_keyboard_arrow_down"
+                    android:layout_height="30dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_gravity="center|right"/>
+
+           <TextView
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:textSize="13sp"
@@ -38,6 +49,7 @@
                 android:layout_gravity="left"
                 android:textStyle="bold"
                 android:textColor="#000"/>
+            </FrameLayout>
 
             <TextView
                 android:layout_width="match_parent"
