--- a/app/src/main/res/layout/recycler_view_layout.xml
+++ b/app/src/main/res/layout/recycler_view_layout.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 <TextView
     android:layout_width="0dp"
     android:layout_weight="4"
@@ -32,6 +38,41 @@
         android:src="@drawable/ic_keyboard_arrow_down"
         android:layout_gravity="right|center"/>
     </FrameLayout>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/linearMoreInfo1"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:visibility="visible"
+        android:background="@drawable/modified_search_button1"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:paddingBottom="5dp">
+
+
+        <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:orientation="vertical"-->
+        <!--android:visibility="gone"-->
+        <!--android:layout_height="wrap_content">-->
+
+
+        <TextView
+            android:id="@+id/moreInfo1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+
+            android:padding="16dp"
+            android:text="confirmed planet"
+            android:textSize="11sp" />
+
+        <!--</LinearLayout>-->
+        <!--</FrameLayout>-->
+    </LinearLayout>
 
 
 </LinearLayout>
