--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -15,10 +15,10 @@
             android:orientation="vertical"
             android:layout_height="match_parent">
             <TextView
-                android:id="@+id/nameofplanet"
+                android:id="@+id/linkOfPlanet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="hikajsdflkjaskdlfjklasdjf"/>
+                android:text="hi man"/>
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:visibility="gone"
