--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="#03000000"
+    android:background="@color/colorPrimary"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
     <FrameLayout
         android:layout_width="match_parent"
-        android:background="@color/colorPrimary"
+
         android:id="@+id/mainToolBar"
         android:layout_height="60dp">
 
@@ -24,6 +24,7 @@
     <GridView
         android:layout_width="match_parent"
         android:id="@+id/gridPlanet"
+        android:padding="5dp"
         android:layout_height="match_parent"
         android:numColumns="3"></GridView>
 
