--- a/app/src/main/res/layout/list_exploration.xml
+++ b/app/src/main/res/layout/list_exploration.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-
+android:background="#375980"
     android:layout_height="wrap_content">
 
 
@@ -12,29 +12,12 @@
             android:orientation="vertical"
             android:id="@+id/linearContent"
             android:layout_height="wrap_content">
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:textSize="20sp"-->
-                <!--android:text="How far is this Planet"-->
-                <!--android:id="@+id/tvChatAtZero"-->
-                <!--android:paddingTop="2dp"-->
-                <!--android:paddingBottom="2dp"-->
-                <!--android:paddingRight="2dp"-->
-                <!--android:paddingLeft="16dp"-->
-                <!--android:layout_gravity="left"-->
-                <!--android:fontFamily="sans-serif"-->
-                <!--android:textColor="#000"/>-->
+
             <FrameLayout
                 android:layout_width="match_parent"
 
                 android:layout_height="wrap_content">
-                <ImageView
-                    android:layout_width="30dp"
-                    android:src="@drawable/ic_keyboard_arrow_down"
-                    android:layout_height="30dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_gravity="center|right"/>
+
 
            <TextView
                 android:layout_width="match_parent"
@@ -48,7 +31,7 @@
                 android:id="@+id/question"
                 android:layout_gravity="left"
                 android:textStyle="bold"
-                android:textColor="#000"/>
+                android:textColor="#FFF"/>
             </FrameLayout>
 
             <TextView
@@ -61,38 +44,22 @@
                 android:paddingLeft="16dp"
                 android:textSize="12sp"
                 android:textStyle="bold"
+                android:textColor="#FFF"
                 android:id="@+id/short_answer"
                 android:gravity="left"/>
 
-            <!--<TextView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="You cant imagine blah blaah blaaahblaaah"-->
-                <!--android:paddingTop="2dp"-->
-                <!--android:paddingBottom="10dp"-->
-                <!--android:paddingRight="2dp"-->
-                <!--android:paddingLeft="16dp"-->
-                <!--android:textSize="11sp"-->
-                <!--android:id="@+id/long_ans"-->
-                <!--android:visibility="gone"-->
-                <!--android:gravity="left"/>-->
+
 
         </LinearLayout>
             <LinearLayout
                 android:id="@+id/linearMoreInfo"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:visibility="gone"
-                android:background="@drawable/modified_search_button1"
+
                 android:layout_height="wrap_content"
                 android:paddingBottom="5dp">
 
 
-                    <!--<LinearLayout-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:orientation="vertical"-->
-                        <!--android:visibility="gone"-->
-                        <!--android:layout_height="wrap_content">-->
 
 
                         <TextView
@@ -100,13 +67,18 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="left"
-
                             android:padding="16dp"
+                            android:textColor="#FFF"
                             android:text="confirmed planet"
                             android:textSize="11sp" />
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="1px"
 
-                    <!--</LinearLayout>-->
-                <!--</FrameLayout>-->
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="18dp"
+    android:background="#6bffffff"/>
+
             </LinearLayout>
 
 
