--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -96,6 +96,7 @@
     android:layout_marginTop="15dp"
     android:id="@+id/CardMoreInfo"
     android:elevation="5dp"
+    app:cardBackgroundColor="#517fb4"
     android:layout_marginBottom="10dp"
     app:cardCornerRadius="3dp"
     android:layout_height="wrap_content">
@@ -115,7 +116,7 @@
             android:text="More Info"
             android:paddingTop="15dp"
             android:paddingBottom="0dp"
-
+android:gravity="center"
             android:paddingRight="2dp"
             android:paddingLeft="16dp"
             android:id="@+id/tvMoreInfoBox"
