--- a/app/src/main/res/layout/grid_planet_view.xml
+++ b/app/src/main/res/layout/grid_planet_view.xml
@@ -70,8 +70,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="10sp"
-                    android:text="hrs/day"
+                    android:textSize="9sp"
+                    android:text=" orbital Prd"
                     android:padding="2dp"
                     android:textColor="#FFF"
                     android:layout_gravity="center"
