--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -55,22 +55,22 @@
                     android:layout_height="match_parent">
                 </android.support.v7.widget.RecyclerView>
             </android.support.v7.widget.CardView>
-<android.support.v7.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginTop="15dp"
-    android:id="@+id/CardMoreInfo"
-    android:elevation="5dp"
-    app:cardBackgroundColor="#4a74a4"
-    android:layout_marginBottom="10dp"
-    app:cardCornerRadius="3dp"
-    android:layout_height="wrap_content">
+<!--<android.support.v7.widget.CardView-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_marginLeft="8dp"-->
+    <!--android:layout_marginRight="8dp"-->
+    <!--android:layout_marginTop="15dp"-->
+    <!--android:id="@+id/CardMoreInfo"-->
+    <!--android:elevation="5dp"-->
+    <!--app:cardBackgroundColor="#4a74a4"-->
+    <!--android:layout_marginBottom="10dp"-->
+    <!--app:cardCornerRadius="25dp"-->
+    <!--android:layout_height="wrap_content">-->
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:id="@+id/linearContent"
-        android:layout_height="wrap_content">
+        android:layout_height="65dp">
 
 
 
@@ -79,7 +79,8 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:textSize="15sp"
-            android:text="More Info"
+            android:text="Click for More Info"
+            android:gravity="center"
             android:paddingTop="15dp"
             android:paddingBottom="0dp"
 
@@ -96,16 +97,17 @@
         android:layout_height="wrap_content"
         android:text="Click Here for more info"
         android:paddingTop="0dp"
-        android:paddingBottom="10dp"
+        android:paddingBottom="16dp"
         android:paddingRight="2dp"
         android:paddingLeft="16dp"
         android:textSize="12sp"
         android:textStyle="bold"
+        android:visibility="gone"
         android:textColor="#040486"
         android:id="@+id/tvMoreInfoDescription"
-        android:gravity="left"/>
+        android:gravity="center"/>
     </LinearLayout>
-</android.support.v7.widget.CardView>
+<!--</android.support.v7.widget.CardView>-->
         </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
